# mcp-askcpg

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/askcpg/: server.py
