[project]
name = "mcp-askcpg"
version = "0.1.2"
description = "This is a MCP tools for connecting to Qmed Copilot askCPG feature, where it enable your LLM to get the medical knowledge from Malaysia Clinical Practice Guideline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.5.0",
    "requests>=2.32.3",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
askcpg = "askcpg:main"


[tool.hatch.build.targets.wheel]
packages = ["src/askcpg"]

[project.urls]
Homepage = "https://qmed.asia"
